Made the faded text color configurable in global.css, redid the pagination footer of the index page, had a bug on mobile views

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,4 +15,5 @@
     --pink: #fa3a57;
     --brown: #a3821a;*/
     --theme-primary: #f05230;
+    --faded-text: #bdbdbd;
 }
